--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css">
   <!--=============== FONT-AWSOME-ICONS ===============-->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <!-- Thêm vào phần <head> của index.html -->
   <meta name="csrf-token" content="{{ csrf_token() }}">
   <meta name="description" content="Vue Pure Admin - CineBoo">
 </head>
